mrt_assignment_2/mrt_ws/log/build_2023-12-20_19-47-59/suketupatni_assn_2/stdout_stderr.log
running egg_info
creating ../../build/suketupatni_assn_2/suketupatni_assn_2.egg-info
writing ../../build/suketupatni_assn_2/suketupatni_assn_2.egg-info/PKG-INFO
writing dependency_links to ../../build/suketupatni_assn_2/suketupatni_assn_2.egg-info/dependency_links.txt
writing entry points to ../../build/suketupatni_assn_2/suketupatni_assn_2.egg-info/entry_points.txt
writing requirements to ../../build/suketupatni_assn_2/suketupatni_assn_2.egg-info/requires.txt
writing top-level names to ../../build/suketupatni_assn_2/suketupatni_assn_2.egg-info/top_level.txt
writing manifest file '../../build/suketupatni_assn_2/suketupatni_assn_2.egg-info/SOURCES.txt'
reading manifest file '../../build/suketupatni_assn_2/suketupatni_assn_2.egg-info/SOURCES.txt'
writing manifest file '../../build/suketupatni_assn_2/suketupatni_assn_2.egg-info/SOURCES.txt'
running build
running build_py
creating /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/build/suketupatni_assn_2/build
creating /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/build/suketupatni_assn_2/build/lib
creating /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/build/suketupatni_assn_2/build/lib/suketupatni_assn_2
copying suketupatni_assn_2/d_rover2.py -> /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/build/suketupatni_assn_2/build/lib/suketupatni_assn_2
copying suketupatni_assn_2/__init__.py -> /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/build/suketupatni_assn_2/build/lib/suketupatni_assn_2
copying suketupatni_assn_2/d_rover1.py -> /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/build/suketupatni_assn_2/build/lib/suketupatni_assn_2
copying suketupatni_assn_2/d_rover4.py -> /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/build/suketupatni_assn_2/build/lib/suketupatni_assn_2
copying suketupatni_assn_2/d_rover3.py -> /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/build/suketupatni_assn_2/build/lib/suketupatni_assn_2
copying suketupatni_assn_2/basestation.py -> /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/build/suketupatni_assn_2/build/lib/suketupatni_assn_2
running install
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
running install_lib
creating /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/install/suketupatni_assn_2/lib/python3.10/site-packages/suketupatni_assn_2
copying /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/build/suketupatni_assn_2/build/lib/suketupatni_assn_2/d_rover2.py -> /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/install/suketupatni_assn_2/lib/python3.10/site-packages/suketupatni_assn_2
copying /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/build/suketupatni_assn_2/build/lib/suketupatni_assn_2/__init__.py -> /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/install/suketupatni_assn_2/lib/python3.10/site-packages/suketupatni_assn_2
copying /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/build/suketupatni_assn_2/build/lib/suketupatni_assn_2/d_rover1.py -> /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/install/suketupatni_assn_2/lib/python3.10/site-packages/suketupatni_assn_2
copying /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/build/suketupatni_assn_2/build/lib/suketupatni_assn_2/d_rover4.py -> /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/install/suketupatni_assn_2/lib/python3.10/site-packages/suketupatni_assn_2
copying /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/build/suketupatni_assn_2/build/lib/suketupatni_assn_2/d_rover3.py -> /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/install/suketupatni_assn_2/lib/python3.10/site-packages/suketupatni_assn_2
copying /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/build/suketupatni_assn_2/build/lib/suketupatni_assn_2/basestation.py -> /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/install/suketupatni_assn_2/lib/python3.10/site-packages/suketupatni_assn_2
byte-compiling /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/install/suketupatni_assn_2/lib/python3.10/site-packages/suketupatni_assn_2/d_rover2.py to d_rover2.cpython-310.pyc
byte-compiling /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/install/suketupatni_assn_2/lib/python3.10/site-packages/suketupatni_assn_2/__init__.py to __init__.cpython-310.pyc
byte-compiling /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/install/suketupatni_assn_2/lib/python3.10/site-packages/suketupatni_assn_2/d_rover1.py to d_rover1.cpython-310.pyc
byte-compiling /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/install/suketupatni_assn_2/lib/python3.10/site-packages/suketupatni_assn_2/d_rover4.py to d_rover4.cpython-310.pyc
byte-compiling /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/install/suketupatni_assn_2/lib/python3.10/site-packages/suketupatni_assn_2/d_rover3.py to d_rover3.cpython-310.pyc
  File "/home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/install/suketupatni_assn_2/lib/python3.10/site-packages/suketupatni_assn_2/d_rover4.py", line 43
    main()x`
          ^
SyntaxError: invalid syntax

byte-compiling /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/install/suketupatni_assn_2/lib/python3.10/site-packages/suketupatni_assn_2/basestation.py to basestation.cpython-310.pyc
running install_data
creating /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/install/suketupatni_assn_2/share/ament_index
creating /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/install/suketupatni_assn_2/share/ament_index/resource_index
creating /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/install/suketupatni_assn_2/share/ament_index/resource_index/packages
copying resource/suketupatni_assn_2 -> /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/install/suketupatni_assn_2/share/ament_index/resource_index/packages
copying package.xml -> /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/install/suketupatni_assn_2/share/suketupatni_assn_2
running install_egg_info
Copying ../../build/suketupatni_assn_2/suketupatni_assn_2.egg-info to /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/install/suketupatni_assn_2/lib/python3.10/site-packages/suketupatni_assn_2-0.0.0-py3.10.egg-info
running install_scripts
Installing listener script to /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/install/suketupatni_assn_2/lib/suketupatni_assn_2
Installing talker1 script to /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/install/suketupatni_assn_2/lib/suketupatni_assn_2
Installing talker2 script to /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/install/suketupatni_assn_2/lib/suketupatni_assn_2
Installing talker3 script to /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/install/suketupatni_assn_2/lib/suketupatni_assn_2
Installing talker4 script to /home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/install/suketupatni_assn_2/lib/suketupatni_assn_2
writing list of installed files to '/home/suketupatni/Desktop/mrt_assignments/mrt_assignment_2/mrt_ws/build/suketupatni_assn_2/install.log'
